--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.cloud.stream.bindings.sampleOutput.destination=backblaze_smart
 
+#Website that explains this better, in able example, sampleOutput is the name of the message, topicName is the Topic:
+#https://medium.com/@danieljameskay/making-kafka-rabbitmq-integration-easier-with-spring-cloud-stream-part-1-ddbb1c6bf283
+
+# Website with same version as this that explains bindings:
+# https://docs.spring.io/autorepo/docs/spring-cloud-stream-binder-kafka-docs/1.1.0.M1/reference/htmlsingle/
