fixed dependencies so test works as expected again and refactored names

--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 //	compile('org.springframework.boot:spring-boot-starter-security')
-	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth', version: '1.0.0.RELEASE'
+//	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth', version: '1.0.0.RELEASE'
 //	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix', version: '1.4.7.RELEASE'
 
 //	compile('org.springframework.boot:spring-boot-starter-batch')
@@ -40,7 +40,9 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile group: 'org.springframework.cloud', name: 'spring-cloud-stream-test-support', version: '2.2.0.RELEASE'
 
-	testCompile group: 'org.apache.kafka', name: 'kafka-streams-test-utils', version: '2.2.1'
+	
+//	testCompile group: 'org.apache.kafka', name: 'kafka-streams-test-utils', version: '2.2.1'
+	
 	testCompile group: 'io.springfox', name: 'springfox-staticdocs', version: '2.0.1'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.assertj:assertj-core')
