refactored messageChannels and added docker-kafka endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.cloud.stream.bindings.sampleOutput.destination=backblaze_smart
-
+spring.kafka.streams.bootstrap-servers=[192.168.1.249:32768]
+spring.application.name=kafka-client
 #Website that explains this better, in able example, sampleOutput is the name of the message, topicName is the Topic:
 #https://medium.com/@danieljameskay/making-kafka-rabbitmq-integration-easier-with-spring-cloud-stream-part-1-ddbb1c6bf283
 
